libfreenect (1:0.1.2+dfsg-3) UNRELEASED; urgency=low

  [ Yaroslav Halchenko ]
  * Adding Replaces and Breaks for -bin package (Closes: #658712)
    Thanks to Andreas Beckman for the report

  [ Nicolas Bourdaud ]
  * Fix execution on ARM platforms
    new patch: cameras-memcpy-structs-into-aligned-buffer.patch
  * Fix build on big endian platform
    new patch: build-on-big-endian-systems-again.patch

 -- Nicolas Bourdaud <nicolas.bourdaud@gmail.com>  Sun, 05 Feb 2012 22:25:38 +0100

libfreenect (1:0.1.2+dfsg-2) experimental; urgency=low

  [ Nicolas Bourdaud ]
  * Move doxygen from Build-Depends-Indep to Build-Depends.
  * Revert libfreenect-demos to libdevel section

 -- Yaroslav Halchenko <debian@onerussian.com>  Fri, 03 Feb 2012 23:14:33 -0500

libfreenect (1:0.1.2+dfsg-1) experimental; urgency=low

  [ Nicolas Bourdaud ]
  * New upstream release (Closes: #653501)
  * Use libfreenect.0.0.udev file instead of custom install and postinst
    script to install udev rules.
  * Switch to source package format "3.0 (quilt)". Thus source code
    modifications have been converted into quilt patches:
      - New patch dont-install-into-include-subfolder.patch
      - New patch dont-postfix-to-install-libdir.patch
      - New patch modify-fakenect-install.patch
  * Add remove-libusb-include-from-exported-header.patch to drop the
    dependency of libfreenect-dev on libusb-1.0-dev.
  * Add correct-libusb-search-and-include.patch to adjust libusb include
    statements and fix cmake test of libusb.
  * Switch from cdbs to dh
  * Update SONAME from libfreenect0.0 to libfreenect0.1.
  * New patch: add-missing-libs.patch
  * Add -doc package.
  * Set Nicolas as maintainer and move Arne as uploader.
  * Rename libfreenect-demos into libfreenect-bin and add utilities to it.
  * Stop shipping static libraries
  * Update Vcs-* fields in debian/control
  
  [ Yaroslav Halchenko ]
  * python-freenect: Added module frame_convert.py within examples
